<resources>
    <string name="app_name">turismo</string>
    <string name="facebook_app_id">1956352954612641</string>
    <string name="fb_login_protocol_scheme">fb1956352954612641</string>
    <string name="error_login">Error al logear</string>
    <string name="cancel_login">Se cancelo el logeo</string>
    <string name="logout">Cerrar Sesión</string>
    <string name="firebase_error_login">Error al inicar la Sesión</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mapa">mapa</string>
    <string name="inicio">inicio</string>
    <string name="perfil">perfil</string>
    <string name="sitios">tiendas</string>
    <string name="favoritos">hola</string>
    <string name="noticias_o_inicio">Noticias o inicio</string>
    <string name="oo">gola</string>
    <string name="action_add_current_contact">pAtras</string>
    <string name="action_my_contacts">action_my-.contacts</string>
    <string name="action_about">action_about</string>
    <string name="action_settings">action_settings</string>
    <string name="atras">retroceder</string>
    <string name="op_galery">Fotos</string>
    <string name="op_chat">Chat</string>
    <string name="op_reportar">Reportar</string>
    <string name="op_favoritos">Favoritos</string>
    <string name="op_perfil">mi cuenta</string>
    <string name="op_closeapp">Cerrar</string>
    <string name="mi_cuenta">Mi cuenta</string>
    <string name="Noticias">noticias</string>
    <string name="Servicios">servicios</string>
    <string name="OpenCity">OpenCity</string>
</resources>
