<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/btn_buscar"
        android:icon="@mipmap/ic_search"
        android:orderInCategory="100"
        android:title="@string/atras"
        app:showAsAction="always" />
    <item
        android:id="@+id/btn_filtrar"
        android:icon="@mipmap/ic_filter"
        android:orderInCategory="100"
        android:title="@string/atras"
        app:showAsAction="always" />
    <item
        android:id="@+id/option_favoritos"
        android:title="@string/op_favoritos"
        app:showAsAction="never" />

    <item
        android:id="@+id/option_perfil"
        android:title="@string/mi_cuenta"
        app:showAsAction="never" />

    <item
        android:id="@+id/option_cerrar"
        android:orderInCategory="100"
        android:title="@string/op_closeapp"
        app:showAsAction="never" />

</menu>