<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/btn_view_products"
        android:icon="@mipmap/ic_gane_play"
        android:orderInCategory="100"
        android:title="@string/atras"
        app:showAsAction="always" />
    <item
        android:id="@+id/btn_favorite"
        android:icon="@mipmap/ic_heard_white"
        android:orderInCategory="100"
        android:title="@string/atras"
        app:showAsAction="always" />

    <item
        android:id="@+id/option_galery"
        android:title="@string/op_galery"
        app:showAsAction="never" />

    <item
        android:id="@+id/option_chat"
        android:title="@string/op_chat"
        app:showAsAction="never" />

    <item
        android:id="@+id/option_reportar"
        android:orderInCategory="100"
        android:title="@string/op_reportar"
        app:showAsAction="never" />

</menu>